Side panel scrollbar fixed

--- a/src/style.css
+++ b/src/style.css
@@ -93,15 +93,17 @@ html {
     background-color: gray;
   }
 }
-.mainPageLayout .mainPageLayout__page {
+.mainPageLayout {
   min-height: 100vh;
-  width: 100%;
   background-color: #f5f6f8;
+}
+.mainPageLayout .mainPageLayout__page {
+  width: 100%;
 }
 .mainPageLayout .mainPageLayout__page .page__content {
   margin: 0 auto;
   padding: 0 1rem;
-  max-width: 1000px;
+  max-width: 1080px;
 }
 
 @media (min-width: 1260px) {
@@ -113,6 +115,7 @@ html {
     max-height: 100vh;
     overflow-y: scroll;
     justify-self: center;
+    align-self: start;
   }
 }
 .campaignListing .campaignListing__head::after {
