--- a/src/style/components/pages/_mainPageLayout.scss
+++ b/src/style/components/pages/_mainPageLayout.scss
@@ -3,14 +3,14 @@
 @use '../../lib/colors';
 
 .mainPageLayout {
+  min-height: 100vh;
+  background-color: colors.$gray-1;
   .mainPageLayout__page {
-    min-height: 100vh;
     width: 100%;
-    background-color: colors.$gray-1;
     .page__content {
       margin: 0 auto;
       padding: 0 1rem;
-      max-width: 1000px;
+      max-width: 1080px;
     }
   }
 }
@@ -24,6 +24,7 @@
       max-height: 100vh;
       overflow-y: scroll;
       justify-self: center;
+      align-self: start;
     }
   }
 }
